--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.18.0",
+    "axios-hooks": "^1.9.0",
     "http-proxy-middleware": "^0.20.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.4.0"
   },
