about resource working

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.18.0",
     "axios-hooks": "^1.9.0",
     "http-proxy-middleware": "^0.20.0",
+    "js-cookie": "^2.2.1",
+    "jwt-decode": "^2.2.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-html-parser": "^2.0.2",
